feat: added alias and reworked different shorturl endpoints across Java 21 SDK