@@ -9,12 +9,46 @@ import org.slf4j.LoggerFactory;
 
 import java.io.Serializable;
 import java.text.SimpleDateFormat;
-import java.util.*;
+import java.util.Collections;
+import java.util.Date;
+import java.util.HashSet;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
 
 public class Shortlinks extends Request {
 
     private static final Logger logger = LoggerFactory.getLogger(Shortlinks.class);
     private static final SimpleDateFormat DATE_FORMAT = new SimpleDateFormat("yyyy-MM-dd");
+    private static final Set<String> SHORTLINK_FIELDS;
+
+    static {
+        Set<String> fields = new HashSet<>();
+        fields.add("_id");
+        fields.add("url_id");
+        fields.add("account_uid");
+        fields.add("name");
+        fields.add("status");
+        fields.add("base_url");
+        fields.add("short_url");
+        fields.add("long_url");
+        fields.add("url");
+        fields.add("visits");
+        fields.add("unique_visits");
+        fields.add("preview_visits");
+        fields.add("created_by");
+        fields.add("created_on");
+        fields.add("alias");
+        fields.add("reference_type");
+        fields.add("expiration");
+        fields.add("expiration_date");
+        fields.add("study_uid");
+        fields.add("reference_uid");
+        SHORTLINK_FIELDS = Collections.unmodifiableSet(fields);
+    }
 
     public Shortlinks(String apiKey, String secretKey, String apiUri) {
         super(apiKey, secretKey, apiUri);
@@ -25,18 +59,18 @@ public class Shortlinks extends Request {
      *
      * @param longUrl The long URL to shorten (required)
      * @param name Optional name for the shortlink
+     * @param alias Optional alias without spaces (max 30 chars)
      * @param status Optional status (ACTIVE or INACTIVE), defaults to ACTIVE
      * @return ApiResponse with the created shortlink
      */
-    public ApiResponse<ShortlinkJsonObject> create(String longUrl, String name, String status) {
+    public ApiResponse<ShortlinkJsonObject> create(String longUrl, String name, String alias, String status) {
         ApiResponse<ShortlinkJsonObject> response;
-        ShortlinkJsonObject shortlinkResponse;
-
         Map<String, Serializable> bodyParams = new LinkedHashMap<>();
         bodyParams.put("long_url", longUrl);
-        
-        if (name != null && !name.isEmpty()) {
-            bodyParams.put("name", name);
+
+        String normalizedName = normalizeName(name);
+        if (normalizedName != null) {
+            bodyParams.put("name", normalizedName);
         }
         
         if (status != null && !status.isEmpty()) {
@@ -45,11 +79,22 @@ public class Shortlinks extends Request {
             bodyParams.put("status", "ACTIVE");
         }
 
+        if (alias != null && !alias.isEmpty()) {
+            bodyParams.put("alias", normalizeAlias(alias));
+        }
+
         try {
             response = doRequest("short_link", "post", null, bodyParams, false);
             if (response.isOk()) {
-                shortlinkResponse = ShortlinkJsonObject.fromJson(response.getRawResponse());
-                response.setResponse(shortlinkResponse);
+                String raw = response.getRawResponse();
+                if (raw != null && !raw.isBlank()) {
+                    ShortlinkJsonObject shortlink = parseShortlink(raw);
+                    if (shortlink != null) {
+                        response.setResponse(shortlink);
+                    } else {
+                        response.setErrorDescription("Unable to parse shortlink response");
+                    }
+                }
             }
         } catch (Exception e) {
             logger.error("Error creating shortlink", e);
@@ -65,10 +110,21 @@ public class Shortlinks extends Request {
      *
      * @param longUrl The long URL to shorten (required)
      * @param name Optional name for the shortlink
+     * @param alias Optional alias without spaces (max 30 chars)
+     * @return ApiResponse with the created shortlink
+     */
+    public ApiResponse<ShortlinkJsonObject> createWithAlias(String longUrl, String name, String alias) {
+        return create(longUrl, name, alias, "ACTIVE");
+    }
+
+    /**
+     * Create a new shortlink with default ACTIVE status
+     *
+     * @param longUrl The long URL to shorten (required)
      * @return ApiResponse with the created shortlink
      */
     public ApiResponse<ShortlinkJsonObject> create(String longUrl, String name) {
-        return create(longUrl, name, "ACTIVE");
+        return create(longUrl, name, null, "ACTIVE");
     }
 
     /**
@@ -78,7 +134,19 @@ public class Shortlinks extends Request {
      * @return ApiResponse with the created shortlink
      */
     public ApiResponse<ShortlinkJsonObject> create(String longUrl) {
-        return create(longUrl, null, "ACTIVE");
+        return create(longUrl, null, null, "ACTIVE");
+    }
+
+    /**
+     * Create a new shortlink with default ACTIVE status
+     *
+     * @param longUrl The long URL to shorten (required)
+     * @param name Optional name for the shortlink
+     * @param status Optional status (ACTIVE or INACTIVE), defaults to ACTIVE
+     * @return ApiResponse with the created shortlink
+     */
+    public ApiResponse<ShortlinkJsonObject> createWithStatus(String longUrl, String name, String status) {
+        return create(longUrl, name, null, status);
     }
 
     /**
@@ -118,7 +186,7 @@ public class Shortlinks extends Request {
         }
 
         try {
-            response = doRequest("short_link", "get", urlParams, null, true);
+            response = doRequest("short_link/", "get", urlParams, null, true);
             if (response.isOk()) {
                 String rawResponse = response.getRawResponse();
                 
@@ -131,10 +199,16 @@ public class Shortlinks extends Request {
                                 new TypeReference<List<ShortlinkJsonObject>>() {}
                             );
                         } else {
-                            shortlinkResponse = Collections.emptyList();
+                            ShortlinkJsonObject single = parseShortlink(rawResponse);
+                            shortlinkResponse = single != null ? List.of(single) : Collections.emptyList();
                         }
                     } catch (Exception e) {
-                        shortlinkResponse = JsonObjectCollection.fromJson(rawResponse, new TypeReference<List<ShortlinkJsonObject>>() {});
+                        ShortlinkJsonObject single = parseShortlink(rawResponse);
+                        if (single != null) {
+                            shortlinkResponse = List.of(single);
+                        } else {
+                            shortlinkResponse = JsonObjectCollection.fromJson(rawResponse, new TypeReference<List<ShortlinkJsonObject>>() {});
+                        }
                     }
                 } else {
                     shortlinkResponse = JsonObjectCollection.fromJson(rawResponse, new TypeReference<List<ShortlinkJsonObject>>() {});
@@ -166,35 +240,30 @@ public class Shortlinks extends Request {
      * @return ApiResponse with the shortlink
      */
     public ApiResponse<ShortlinkJsonObject> getById(String id) {
-        ApiResponse<ShortlinkJsonObject> response;
-        ShortlinkJsonObject shortlinkResponse;
-
-        Map<String, Serializable> urlParams = new LinkedHashMap<>();
-        urlParams.put("id", id);
-
         try {
-            ApiResponse<List<ShortlinkJsonObject>> listResponse = getList(null, null, null, null, id);
+            ApiResponse<List<ShortlinkJsonObject>> listResponse = getList(null, null, 1, null, id);
             if (listResponse.isOk() && listResponse.getResponse() != null && !listResponse.getResponse().isEmpty()) {
-                shortlinkResponse = listResponse.getResponse().get(0);
-                response = new ApiResponse<>();
-                response.setOk(true);
-                response.setResponse(shortlinkResponse);
-                response.setHttpCode(listResponse.getHttpCode());
-                response.setRawResponse(listResponse.getRawResponse());
-            } else {
-                response = new ApiResponse<>();
-                response.setOk(false);
-                response.setErrorCode(listResponse.getErrorCode());
-                response.setErrorDescription("Shortlink not found");
-                response.setHttpCode(listResponse.getHttpCode());
+                ShortlinkJsonObject shortlink = listResponse.getResponse().get(0);
+                ApiResponse<ShortlinkJsonObject> success = new ApiResponse<>();
+                success.setHttpCode(listResponse.getHttpCode());
+                success.setHttpDescription(listResponse.getHttpDescription());
+                success.setRawResponse(listResponse.getRawResponse());
+                success.setResponse(shortlink);
+                return success;
             }
+            ApiResponse<ShortlinkJsonObject> notFound = new ApiResponse<>();
+            notFound.setHttpCode(listResponse.getHttpCode() == 200 ? 404 : listResponse.getHttpCode());
+            notFound.setHttpDescription(listResponse.getHttpDescription());
+            notFound.setErrorCode(Optional.ofNullable(listResponse.getErrorCode()).orElse(404));
+            notFound.setErrorDescription("Shortlink not found");
+            return notFound;
         } catch (Exception e) {
             logger.error("Error getting shortlink by ID", e);
-            response = new ApiResponse<>();
-            response.setErrorCode(-1);
-            response.setErrorDescription(e.getMessage());
+            ApiResponse<ShortlinkJsonObject> error = new ApiResponse<>();
+            error.setErrorCode(-1);
+            error.setErrorDescription(e.getMessage());
+            return error;
         }
-        return response;
     }
 
     /**
@@ -206,17 +275,27 @@ public class Shortlinks extends Request {
      */
     public ApiResponse<ShortlinkJsonObject> updateStatus(String id, String status) {
         ApiResponse<ShortlinkJsonObject> response;
-        ShortlinkJsonObject shortlinkResponse;
-
-        Map<String, Serializable> urlParams = new LinkedHashMap<>();
-        urlParams.put("id", id);
-        urlParams.put("status", status);
+        if ("ACTIVE".equalsIgnoreCase(status)) {
+            throw new IllegalArgumentException("Shortlinks cannot be reactivated; only INACTIVE updates are supported.");
+        }
 
         try {
-            response = doRequest("short_link", "put", urlParams, null, true);
+            Map<String, Serializable> filters = new LinkedHashMap<>();
+            filters.put("id", id);
+            Map<String, Serializable> body = new LinkedHashMap<>();
+            body.put("status", status.toUpperCase(Locale.ROOT));
+            String resource = "short_link/" + id + "/status";
+            response = doRequest(resource, "put", filters, body, true);
             if (response.isOk()) {
-                shortlinkResponse = ShortlinkJsonObject.fromJson(response.getRawResponse());
-                response.setResponse(shortlinkResponse);
+                String raw = response.getRawResponse();
+                if (raw != null && !raw.isBlank()) {
+                    ShortlinkJsonObject shortlink = parseShortlink(raw);
+                    if (shortlink != null) {
+                        response.setResponse(shortlink);
+                    } else {
+                        response.setErrorDescription("Unable to parse shortlink response");
+                    }
+                }
             }
         } catch (Exception e) {
             logger.error("Error updating shortlink status", e);
@@ -225,6 +304,108 @@ public class Shortlinks extends Request {
             response.setErrorDescription(e.getMessage());
         }
         return response;
+    }
+
+    private String normalizeAlias(String alias) {
+        String trimmed = alias.trim();
+        if (trimmed.isEmpty()) {
+            throw new IllegalArgumentException("Alias cannot be empty");
+        }
+        if (trimmed.length() > 30) {
+            throw new IllegalArgumentException("Alias must be 30 characters or fewer");
+        }
+        if (trimmed.chars().anyMatch(Character::isWhitespace)) {
+            throw new IllegalArgumentException("Alias cannot contain whitespace");
+        }
+        return trimmed;
+    }
+
+    private String normalizeName(String name) {
+        if (name == null) {
+            return null;
+        }
+        String trimmed = name.trim();
+        if (trimmed.isEmpty()) {
+            return null;
+        }
+        if (trimmed.length() > 50) {
+            throw new IllegalArgumentException("Name must be 50 characters or fewer");
+        }
+        return trimmed;
+    }
+
+    private ShortlinkJsonObject parseShortlink(String raw) {
+        try {
+            if (raw == null || raw.isBlank()) {
+                return null;
+            }
+            if (raw.trim().startsWith("{") && raw.contains("\"message\"")) {
+                Map<String, Object> root = JsonObjectCollection.fromJson(raw, new TypeReference<Map<String, Object>>() {});
+                Map<String, Object> candidate = extractShortlinkMap(root);
+                if (candidate != null && !candidate.isEmpty()) {
+                    Map<String, Object> filtered = new LinkedHashMap<>();
+                    for (String field : SHORTLINK_FIELDS) {
+                        Object value = candidate.get(field);
+                        if (value != null) {
+                            filtered.put(field, value);
+                        }
+                    }
+                    if (filtered.isEmpty()) {
+                        filtered.putAll(candidate);
+                    }
+                    String normalized = getSerializer().serialize(filtered);
+                    return ShortlinkJsonObject.fromJson(normalized);
+                }
+            }
+            Map<String, Object> root = JsonObjectCollection.fromJson(raw, new TypeReference<Map<String, Object>>() {});
+            Map<String, Object> candidate = extractShortlinkMap(root);
+            if (candidate == null || candidate.isEmpty()) {
+                return ShortlinkJsonObject.fromJson(raw);
+            }
+            Map<String, Object> filtered = new LinkedHashMap<>();
+            for (String field : SHORTLINK_FIELDS) {
+                Object value = candidate.get(field);
+                if (value != null) {
+                    filtered.put(field, value);
+                }
+            }
+            if (filtered.isEmpty()) {
+                filtered.putAll(candidate);
+            }
+            String normalized = getSerializer().serialize(filtered);
+            return ShortlinkJsonObject.fromJson(normalized);
+        } catch (Exception exception) {
+            logger.error("Failed to parse shortlink payload", exception);
+            return null;
+        }
+    }
+
+    private Map<String, Object> extractShortlinkMap(Map<String, Object> root) {
+        if (root == null || root.isEmpty()) {
+            return null;
+        }
+        Object data = root.get("data");
+        if (data instanceof Map) {
+            @SuppressWarnings("unchecked")
+            Map<String, Object> dataMap = (Map<String, Object>) data;
+            return dataMap;
+        }
+        if (data instanceof List) {
+            List<?> list = (List<?>) data;
+            if (!list.isEmpty() && list.get(0) instanceof Map) {
+                @SuppressWarnings("unchecked")
+                Map<String, Object> first = (Map<String, Object>) list.get(0);
+                return first;
+            }
+        }
+        Map<String, Object> filtered = new LinkedHashMap<>();
+        for (String field : SHORTLINK_FIELDS) {
+            Object value = root.get(field);
+            if (value != null) {
+                filtered.put(field, value);
+            }
+        }
+        return filtered.isEmpty() ? root : filtered;
     }
 }
 
